@@ -1,5 +1,13 @@
 2011-09-02  Oliver Hunt  <oliver@apple.com>
 
+        Fix 32bit build.
+
+        * heap/NewSpace.h:
+        (JSC::NewSpace::allocatePropertyStorage):
+        (JSC::NewSpace::inPropertyStorageNursery):
+
+2011-09-02  Oliver Hunt  <oliver@apple.com>
+
         Use bump allocator for initial property storage
         https://bugs.webkit.org/show_bug.cgi?id=67494
 
